Added endpoint for user repository